--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_2296565_9oe6e97jmbh.css">
+  <link rel="stylesheet" href="/css/iconfont.css">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
